--- a/androidts/AndroidManifest.xml
+++ b/androidts/AndroidManifest.xml
@@ -26,7 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+                <activity
+            android:name="com.evature.search.HotelMapActivity"
+            android:label="Hotel Area" 
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity android:name="com.evature.search.MyPreferences"></activity>
+        <uses-library android:name="com.google.android.maps"/>
+        <activity android:name="HotelsMapActivity"></activity>
     </application>
 
 </manifest>
