--- a/EvaAPIs/.classpath
+++ b/EvaAPIs/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/httpclient-4.2.3.jar"/>
+	<classpathentry kind="lib" path="libs/httpmime-4.2.3.jar"/>
+	<classpathentry kind="lib" path="libs/commons-httpclient-3.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
