--- a/androidts/AndroidManifest.xml
+++ b/androidts/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
     <application
         android:icon="@drawable/ic_launcher"
@@ -26,13 +27,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
                 <activity
             android:name="com.evature.search.HotelMapActivity"
             android:label="Hotel Area" 
-            android:theme="@android:style/Theme.NoTitleBar"/>
+            />
         <activity android:name="com.evature.search.MyPreferences"></activity>
         <uses-library android:name="com.google.android.maps"/>
         <activity android:name="HotelsMapActivity"></activity>
+        <activity android:name="com.evaapis.EvaSpeechRecognitionActivity"></activity>
     </application>
 
 </manifest>
