--- a/androidts/AndroidManifest.xml
+++ b/androidts/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:label="@string/app_name" android:name="com.evature.search.MyApplication">
         <activity
             android:name="com.evature.search.MainActivity"
-            android:label="@string/app_name" > <!-- android:theme="@android:style/Theme.Black"-->
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" > <!-- android:theme="@android:style/Theme.Black"-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,8 +35,9 @@
             />
         <activity android:name="com.evature.search.MyPreferences"></activity>
         <uses-library android:name="com.google.android.maps"/>
-        <activity android:name="HotelsMapActivity"></activity>
-        <activity android:name="com.evaapis.EvaSpeechRecognitionActivity"></activity>
+        <activity android:name="HotelsMapActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="com.evaapis.EvaSpeechRecognitionActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="EvaCheckoutActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
