Removed cross-platform java code from EvaAPIs,  added source-link in project settings to the java_api code (excluding the json and logging code).  Added  Log wrapper to match the Log import

--- a/EvaAPIs/.project
+++ b/EvaAPIs/.project
@@ -30,4 +30,11 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>java_api</name>
+			<type>2</type>
+			<location>/Users/iftah/workspaces/eva/android/java_api/src</location>
+		</link>
+	</linkedResources>
 </projectDescription>
