--- a/androidts/tests/.classpath
+++ b/androidts/tests/.classpath
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+    <classpathentry combineaccessrules="false" kind="src" path="/EvaAPIs"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android_search"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="output" path="bin/classes"/>
+	<classpathentry kind="lib" path="libs/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="libs/robolectric-2.1-jar-with-dependencies.jar" sourcepath="/Users/iftah/.sourceattacher/robolectric-2.1-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/Users/iftah/devel/android-sdk-macosx/add-ons/addon-google_apis-google_inc_-8/libs/maps.jar"/>
+	<classpathentry kind="lib" path="/Users/iftah/devel/android-sdk-macosx/platforms/android-17/android.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
