--- a/androidts/tests/.classpath
+++ b/androidts/tests/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry combineaccessrules="false" kind="src" path="/EvaAPIs"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/EvaAPIs"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android_search"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="libs/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="libs/mockito-all-1.9.5.jar" sourcepath="/Users/iftah/.sourceattacher/mockito-all-1.9.5-sources.jar"/>
 	<classpathentry kind="lib" path="libs/robolectric-2.1-jar-with-dependencies.jar" sourcepath="/Users/iftah/.sourceattacher/robolectric-2.1-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
