--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="16"
     android:versionName="Pre-alpha" >
 
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="16"/>
+    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="16"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/eva_icon"
         android:label="@string/app_name" android:name="com.evature.search.MyApplication">
         <activity
             android:name="com.evature.search.controllers.activities.MainActivity"
