--- a/android_search/tests/.classpath
+++ b/android_search/tests/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/acra-4.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/roboguice-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
