--- a/android_search/.classpath
+++ b/android_search/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="libs/roboguice-2.0.jar"/>
 	<classpathentry kind="lib" path="libs/guice-3.0-no_aop.jar"/>
+	<classpathentry kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
