fix for child ages input, fix for hotels with supplier type “S”

--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.evature.search"
-    android:versionCode="37"
+    android:versionCode="38"
     android:versionName="Pre-alpha" >
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
@@ -45,7 +45,7 @@
         <activity android:name="com.evature.search.controllers.activities.MyPreferences"></activity>
         <uses-library android:name="com.google.android.maps"/>
         <activity android:name="com.evature.search.controllers.activities.HotelsMapActivity" android:screenOrientation="portrait"></activity>
-        <activity android:name="com.evature.search.controllers.activities.EvaCheckoutActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="com.evature.search.controllers.activities.EvaSelectRoomActivity" android:screenOrientation="portrait"></activity>
         <activity
              android:name="com.evature.search.controllers.activities.BugReportDialog"
              android:excludeFromRecents="true"
