--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.virtual_hotel_agent.search"
-    android:versionCode="43"
+    android:versionCode="44"
     android:versionName="1.0.0" >
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
@@ -44,7 +44,6 @@
             />
         <activity android:name="com.virtual_hotel_agent.search.controllers.activities.MyPreferences"></activity>
         <uses-library android:name="com.google.android.maps"/>
-        <activity android:name="com.virtual_hotel_agent.search.controllers.activities.HotelsMapActivity" android:screenOrientation="portrait"></activity>
         <activity android:name="com.virtual_hotel_agent.search.controllers.activities.SelectRoomActivity" android:screenOrientation="portrait"></activity>
         <activity
              android:name="com.virtual_hotel_agent.search.controllers.activities.BugReportDialog"
@@ -55,7 +54,9 @@
 
         <meta-data
 		   android:name="com.google.android.maps.v2.API_KEY"
-		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/>
+		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/> <!-- Release:-->
+			<!-- android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" />   Debug from Ubuntu -->
+		   <!--  android:value="AIzaSyBPnkaWt4r_z86YQihDfDHH3armRZNTnrs" />   Debug from Mac:-->
         <meta-data
 		    android:name="com.google.android.gms.version"
 		    android:value="@integer/google_play_services_version" />
