--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -54,11 +54,13 @@
 
         <meta-data
 		   android:name="com.google.android.maps.v2.API_KEY"
-		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/> <!-- Release:-->
-		<!-- 
-			android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" />   Debug from Ubuntu 
-		     android:value="AIzaSyBPnkaWt4r_z86YQihDfDHH3armRZNTnrs" />   Debug from Mac
-		 -->
+			android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" />  <!-- 			Debug from Ubuntu  -->
+		
+<!-- 		   Release: -->
+<!-- 		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/>  -->
+<!-- Debug from Mac -->
+<!-- 		     android:value="AIzaSyBPnkaWt4r_z86YQihDfDHH3armRZNTnrs" />    -->
+		 
         <meta-data
 		    android:name="com.google.android.gms.version"
 		    android:value="@integer/google_play_services_version" />
