--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.virtual_hotel_agent.search"
-    android:versionCode="44"
+    android:versionCode="45"
     android:versionName="1.0.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
+    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="19"/>
     <permission
         android:name="com.virtual_hotel_agent.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
@@ -30,7 +30,9 @@
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" > <!-- android:theme="@android:style/Theme.Black"-->
+            android:screenOrientation="portrait"
+             > <!-- android:theme="@android:style/Theme.Black"-->
+<!--             android:theme="@android:style/Theme.NoTitleBar"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,10 +56,11 @@
 
         <meta-data
 		   android:name="com.google.android.maps.v2.API_KEY"
-			android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" />  <!-- 			Debug from Ubuntu  -->
-		
+		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/> 
 <!-- 		   Release: -->
-<!-- 		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/>  -->
+
+ <!-- 			Debug from Ubuntu  -->
+<!--  android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" />  -->
 <!-- Debug from Mac -->
 <!-- 		     android:value="AIzaSyBPnkaWt4r_z86YQihDfDHH3armRZNTnrs" />    -->
 		 
