--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:glEsVersion="0x00020000"
         android:required="true"/>
     
+
     <application
         android:icon="@drawable/hotel72"
         android:label="@string/app_name" android:name="com.virtual_hotel_agent.search.MyApplication">
@@ -53,14 +54,22 @@
              android:finishOnTaskLaunch="true"
              android:launchMode="singleInstance"
              android:theme="@android:style/Theme.Dialog" />
+        
+        <service android:name="com.google.analytics.tracking.android.CampaignTrackingService" />
+        <receiver
+            android:name="com.google.analytics.tracking.android.CampaignTrackingReceiver"
+            android:exported="true" />
+        <intent-filter>
+            <action android:name="com.android.vending.INSTALL_REFERRER" />
+        </intent-filter>
 
-        <meta-data
+		<meta-data
 		   android:name="com.google.android.maps.v2.API_KEY"
-		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/> 
-<!-- 		   Release: -->
-
+ android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" /> 
  <!-- 			Debug from Ubuntu  -->
-<!--  android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" />  -->
+
+<!-- 		   Release: -->
+<!-- 		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/>  -->
 <!-- Debug from Mac -->
 <!-- 		     android:value="AIzaSyBPnkaWt4r_z86YQihDfDHH3armRZNTnrs" />    -->
 		 
