--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -4,78 +4,95 @@
     android:versionCode="45"
     android:versionName="1.0.0" >
 
-    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="19"/>
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="19" />
+
     <permission
         android:name="com.virtual_hotel_agent.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
-    <uses-permission android:name="com.virtual_hotel_agent.permission.MAPS_RECEIVE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_LOGS"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.virtual_hotel_agent.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
-    
+        android:required="true" />
 
     <application
+        android:name="com.virtual_hotel_agent.search.MyApplication"
         android:icon="@drawable/hotel72"
-        android:label="@string/app_name" android:name="com.virtual_hotel_agent.search.MyApplication">
+        android:label="@string/app_name" >
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-             > <!-- android:theme="@android:style/Theme.Black"-->
-<!--             android:theme="@android:style/Theme.NoTitleBar"> -->
+            android:screenOrientation="portrait" > <!-- android:theme="@android:style/Theme.Black" -->
+            <!-- android:theme="@android:style/Theme.NoTitleBar"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
-   			android:name="com.virtual_hotel_agent.search.controllers.activities.HotelMapActivity"
-            android:label="Hotel Area" 
-            />
-        <activity android:name="com.virtual_hotel_agent.search.controllers.activities.MyPreferences"></activity>
-        <uses-library android:name="com.google.android.maps"/>
-        <activity android:name="com.virtual_hotel_agent.search.controllers.activities.SelectRoomActivity" android:screenOrientation="portrait"></activity>
+            android:name="com.virtual_hotel_agent.search.controllers.activities.HotelMapActivity"
+            android:label="Hotel Area" />
+        <activity android:name="com.virtual_hotel_agent.search.controllers.activities.MyPreferences" >
+        </activity>
+
+        <uses-library android:name="com.google.android.maps" />
+
         <activity
-             android:name="com.virtual_hotel_agent.search.controllers.activities.BugReportDialog"
-             android:excludeFromRecents="true"
-             android:finishOnTaskLaunch="true"
-             android:launchMode="singleInstance"
-             android:theme="@android:style/Theme.Dialog" />
-        
+            android:name="com.virtual_hotel_agent.search.controllers.activities.SelectRoomActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.virtual_hotel_agent.search.controllers.activities.BugReportDialog"
+            android:excludeFromRecents="true"
+            android:finishOnTaskLaunch="true"
+            android:launchMode="singleInstance"
+            android:theme="@android:style/Theme.Dialog" />
+
         <service android:name="com.google.analytics.tracking.android.CampaignTrackingService" />
+
         <receiver
             android:name="com.google.analytics.tracking.android.CampaignTrackingReceiver"
             android:exported="true" />
+
         <intent-filter>
             <action android:name="com.android.vending.INSTALL_REFERRER" />
         </intent-filter>
 
-		<meta-data
-		   android:name="com.google.android.maps.v2.API_KEY"
- android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" /> 
- <!-- 			Debug from Ubuntu  -->
-
-<!-- 		   Release: -->
-<!-- 		   android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/>  -->
-<!-- Debug from Mac -->
-<!-- 		     android:value="AIzaSyBPnkaWt4r_z86YQihDfDHH3armRZNTnrs" />    -->
-		 
         <meta-data
-		    android:name="com.google.android.gms.version"
-		    android:value="@integer/google_play_services_version" />
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDV0nvSYIL7zIQ6CBh_A-s7YMg0dZMhfiM" />
+        <!-- Debug from Ubuntu -->
+
+
+        <!-- Release: -->
+        <!-- android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/> -->
+        <!-- Debug from Mac -->
+        <!-- android:value="AIzaSyBPnkaWt4r_z86YQihDfDHH3armRZNTnrs" /> -->
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name="com.virtual_hotel_agent.search.ImageGalleryActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_image_gallery"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
     </application>
 
 </manifest>
