--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.virtual_hotel_agent.search"
-    android:versionCode="45"
+    android:versionCode="46"
     android:versionName="1.0.0" >
 
     <uses-sdk
@@ -35,6 +35,7 @@
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/StyledIndicators"
             android:screenOrientation="portrait" > <!-- android:theme="@android:style/Theme.Black" -->
             <!-- android:theme="@android:style/Theme.NoTitleBar"> -->
             <intent-filter>
@@ -79,7 +80,7 @@
 
 
         <!-- Release: -->
-        <!-- android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/> -->
+<!--         android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/> -->
         <!-- Debug from Mac -->
         <!-- android:value="AIzaSyBPnkaWt4r_z86YQihDfDHH3armRZNTnrs" /> -->
 
