--- a/android_search/project.properties
+++ b/android_search/project.properties
@@ -14,3 +14,4 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 target=Google Inc.:Google APIs:19
 android.library.reference.1=../EvaAPIs
 android.library.reference.2=../google-play-services_lib
+android.library.reference.3=../../../devel/Android-ViewPagerIndicator/library
