Room photos and better room description

--- a/android_search/project.properties
+++ b/android_search/project.properties
@@ -15,3 +15,4 @@ target=Google Inc.:Google APIs:19
 android.library.reference.1=../EvaAPIs
 android.library.reference.2=../google-play-services_lib
 android.library.reference.3=../../../devel/Android-ViewPagerIndicator/library
+android.library.reference.4=../../../devel/ListViewAnimations/library
