--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.virtual_hotel_agent.search"
-    android:versionCode="50"
-    android:versionName="1.0.4" >
+    android:versionCode="51"
+    android:versionName="1.0.5" >
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -29,6 +29,7 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+<!--         android:icon="@drawable/original_icon_512" -->
     <application
         android:name="com.virtual_hotel_agent.search.MyApplication"
         android:icon="@drawable/hotel72"
