--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -32,7 +32,7 @@
 <!--         android:icon="@drawable/original_icon_512" -->
     <application
         android:name="com.virtual_hotel_agent.search.MyApplication"
-        android:icon="@drawable/hotel72"
+        android:icon="@drawable/hotel_icon512"
         android:label="@string/app_name" >
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.MainActivity"
