--- a/android_search/.classpath
+++ b/android_search/.classpath
@@ -8,7 +8,6 @@
 	<classpathentry kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
 	<classpathentry kind="lib" path="libs/joda-time-2.2.jar"/>
 	<classpathentry kind="lib" path="libs/acra-4.5.0.jar"/>
-	<classpathentry kind="lib" path="/android-support-v7-appcompat/libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="/android-support-v7-appcompat/libs/android-support-v7-appcompat.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
