fixed robo-sherlock imports

--- a/android_search/.classpath
+++ b/android_search/.classpath
@@ -5,10 +5,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="libs/roboguice-2.0.jar"/>
-	<classpathentry kind="lib" path="libs/guice-3.0-no_aop.jar" sourcepath="/home/iftah/devel/guice-3.0-src"/>
 	<classpathentry kind="lib" path="libs/libGoogleAnalyticsServices.jar"/>
-	<classpathentry kind="lib" path="libs/joda-time-2.2.jar"/>
 	<classpathentry kind="lib" path="libs/acra-4.5.0.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
