--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -46,6 +46,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter >
+	            <action android:name="android.bluetooth.a2dp.profile.action.CONNECTION_STATE_CHANGED" />
+	        </intent-filter>
         </activity>
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.HotelMapActivity"
