--- a/android_search/project.properties
+++ b/android_search/project.properties
@@ -17,3 +17,4 @@ android.library.reference.2=../../../devel/roboguice-sherlock
 android.library.reference.3=../../../devel/Android-ViewPagerIndicator/library
 android.library.reference.4=../../../devel/ListViewAnimations/library
 android.library.reference.5=../../../devel/adt-bundle-linux-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.6=../../../devel/ShowcaseView/library
