--- a/android_demo/project.properties
+++ b/android_demo/project.properties
@@ -15,3 +15,4 @@ target=android-19
 android.library.reference.1=../EvaAPIs
 
 android.library.reference.2=../../appcompat_v7
+android.library.reference.3=../EvaSpeechRecognition
