--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -19,7 +19,7 @@
 <!--     <uses-permission android:name="android.permission.READ_LOGS" />    ACRA uses it to send logs - but 1) don't want to scare users, 2) app logs are disabled in release, 3) traceback is enough -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 <!--     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />  modify audio routing - commented out GUI -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />      <!--  needed for getDeviceID() for uid param -->
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
 <!-- Required for Maps -->
