--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.virtual_hotel_agent.search"
-    android:versionCode="57"
-    android:versionName="1.0.10" >
+    android:versionCode="58"
+    android:versionName="1.0.11" >
 
     <uses-sdk
         android:minSdkVersion="15"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="21" />
 
     <permission
         android:name="com.virtual_hotel_agent.permission.MAPS_RECEIVE"
@@ -16,22 +16,22 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<!--     <uses-permission android:name="android.permission.READ_LOGS" />    ACRA uses it to send logs - but 1) don't want to scare users, 2) app logs are disabled in release, 3) traceback is enough -->
+    <!-- <uses-permission android:name="android.permission.READ_LOGS" />    ACRA uses it to send logs - but 1) don't want to scare users, 2) app logs are disabled in release, 3) traceback is enough -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-<!--     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />  modify audio routing - commented out GUI -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />      <!--  needed for getDeviceID() for uid param -->
+    <!-- <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />  modify audio routing - commented out GUI -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- needed for getDeviceID() for uid param -->
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-<!-- Required for Maps -->
+    <!-- Required for Maps -->
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="com.virtual_hotel_agent.permission.MAPS_RECEIVE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-<!--         android:icon="@drawable/original_icon_512" -->
+    <!-- android:icon="@drawable/original_icon_512" -->
     <application
         android:name="com.virtual_hotel_agent.search.VHAApplication"
         android:icon="@drawable/hotel_icon512"
@@ -40,25 +40,31 @@
             android:name="com.virtual_hotel_agent.search.controllers.activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/StyledIndicators"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" > 
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustPan" >
+
+            <!-- android:screenOrientation="portrait" > -->
             <!-- android:theme="@android:style/Theme.NoTitleBar"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter >
-	            <action android:name="android.bluetooth.a2dp.profile.action.CONNECTION_STATE_CHANGED" />
-	        </intent-filter>
+            <intent-filter>
+                <action android:name="android.bluetooth.a2dp.profile.action.CONNECTION_STATE_CHANGED" />
+            </intent-filter>
+            <intent-filter>
+		        <action android:name="com.google.android.gms.actions.SEARCH_ACTION"/>
+		        <category android:name="android.intent.category.DEFAULT"/>
+		    </intent-filter>
         </activity>
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.HotelMapActivity"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
-            android:label="Hotel Area" />
-        
-        <activity android:name="com.virtual_hotel_agent.search.controllers.activities.MyPreferences" 
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:label="Hotel Area"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
+        <activity
+            android:name="com.virtual_hotel_agent.search.controllers.activities.MyPreferences"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
         </activity>
 
         <uses-library android:name="com.google.android.maps" />
@@ -68,24 +74,18 @@
             android:excludeFromRecents="true"
             android:finishOnTaskLaunch="true"
             android:launchMode="singleInstance"
-            android:theme="@android:style/Theme.Holo.Light.Dialog"
-             />
-        
+            android:theme="@android:style/Theme.Holo.Light.Dialog" />
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.AboutDialog"
             android:excludeFromRecents="true"
             android:finishOnTaskLaunch="true"
             android:launchMode="singleInstance"
-            android:theme="@android:style/Theme.Holo.Light.Dialog"
-             />
-        
+            android:theme="@android:style/Theme.Holo.Light.Dialog" />
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.VolumeSettingsDialog"
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
-            android:theme="@android:style/Theme.Holo.Light.Dialog"
-             />
-        
+            android:theme="@android:style/Theme.Holo.Light.Dialog" />
 
         <service android:name="com.google.analytics.tracking.android.CampaignTrackingService" />
 
@@ -96,10 +96,10 @@
         <intent-filter>
             <action android:name="com.android.vending.INSTALL_REFERRER" />
         </intent-filter>
-        
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/>
+        	android:value="AIzaSyAy9PYM3qzNSfg9vv-d4C_c1OD6ULAA-Yc"/>
         <!-- Release: -->
 
 
@@ -118,7 +118,6 @@
             android:label="@string/title_activity_image_gallery"
             android:theme="@style/FullscreenTheme" >
         </activity>
-        
     </application>
 
 </manifest>
