--- a/android_demo/AndroidManifest.xml
+++ b/android_demo/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.evature.android_demo.MainActivity"
+            android:name="com.evature.android_demo.DemoMainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
