--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.virtual_hotel_agent.search"
-    android:versionCode="58"
-    android:versionName="1.0.11" >
+    android:versionCode="59"
+    android:versionName="1.0.12" >
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -41,9 +41,9 @@
             android:label="@string/app_name"
             android:theme="@style/StyledIndicators"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="adjustPan" 
+            android:screenOrientation="portrait" >
 
-            <!-- android:screenOrientation="portrait" > -->
             <!-- android:theme="@android:style/Theme.NoTitleBar"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
