--- a/android_search/.classpath
+++ b/android_search/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry excluding="com/virtual_hotel_agent/search/controllers/tutorial/**" kind="src" path="src"/>
+	<classpathentry kind="src" path="third_party/EventBus/EventBus/src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/EvaSpeechRecognition"/>
 	<classpathentry kind="output" path="bin/classes"/>
