bug fixes with fragment recycling

--- a/EvaAPIs/project.properties
+++ b/EvaAPIs/project.properties
@@ -13,4 +13,5 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 # Project target.
 target=android-21
 android.library=true
-android.library.reference.1=../EvaSpeechRecognition
+android.library.reference.1=../../../devel/adt-bundle-linux-x86_64-20131030/sdk/extras/android/support/v7/appcompat
+android.library.reference.2=../EvaSpeechRecognition
