--- a/android_search/project.properties
+++ b/android_search/project.properties
@@ -17,3 +17,4 @@ android.library.reference.2=../../../devel/adt-bundle-linux-x86_64-20131030/sdk/
 android.library.reference.3=../EvaAPIs
 android.library.reference.4=third_party/ListViewAnimations/lib-core/src/main
 android.library.reference.5=third_party/ListViewAnimations/lib-manipulation/src/main
+android.library.reference.6=third_party/Android-ViewPagerIndicator/library
