initial facebook login

--- a/android_search/project.properties
+++ b/android_search/project.properties
@@ -20,3 +20,4 @@ android.library.reference.5=../EvaAPIs
 android.library.reference.6=third_party/ListViewAnimations/lib-core/src/main
 android.library.reference.7=third_party/ListViewAnimations/lib-manipulation/src/main
 android.library.reference.8=third_party/Android-ViewPagerIndicator/library
+android.library.reference.9=../../../devel/facebook-android-sdk-3.21.1/facebook
