added .so files for 64 bits cpus

--- a/EvaSDK/evasdk/build.gradle
+++ b/EvaSDK/evasdk/build.gradle
@@ -96,7 +96,7 @@ gradle.projectsEvaluated {
 */
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar', '*.so'])
+    compile fileTree(dir: 'jniLibs', include: ['*.jar', '*.so'])
     compile "com.android.support:support-v4:23+"
 }
 
