added callback result, allowing app callbacks to return custom sayIt/displayIt

--- a/EvaSDK/settings.gradle
+++ b/EvaSDK/settings.gradle
@@ -1,1 +1,1 @@
-include ':evasdk', ':exampleAppCruises', ':exampleAppFlights'
+include ':evasdk', ':exampleAppCruises', ':exampleAppFlights', ':exampleapp'
